[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/themes/label_medium_shadow.tres" type="Theme" id=1]
[ext_resource path="res://ui/garden/select_hud.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/elements/drive_bg_horizontal.png" type="Texture2D" id=3]
[ext_resource path="res://assets/ui/elements/drive_empty_horizontal.png" type="Texture2D" id=4]
[ext_resource path="res://assets/ui/elements/drive_full_horizontal.png" type="Texture2D" id=5]
[ext_resource path="res://assets/ui/elements/drive_bg_vertical.png" type="Texture2D" id=6]
[ext_resource path="res://assets/ui/panels/box_border_inset.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/ui/elements/portrait_bg.png" type="Texture2D" id=8]

[node name="select_hud" type="ReferenceRect"]
visible = false
offset_left = 4.0
offset_top = 4.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="horizontal" type="TextureRect" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 76.0
offset_bottom = 60.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="belly" type="TextureProgressBar" parent="horizontal"]
offset_left = 16.0
offset_top = 4.0
offset_right = 49.0
offset_bottom = 11.0
value = 70.0
rounded = true
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="energy" type="TextureProgressBar" parent="horizontal"]
offset_left = 16.0
offset_top = 16.0
offset_right = 49.0
offset_bottom = 23.0
value = 25.0
rounded = true
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="social" type="TextureProgressBar" parent="horizontal"]
offset_left = 16.0
offset_top = 28.0
offset_right = 49.0
offset_bottom = 35.0
max_value = 8.0
step = 0.0
value = 4.0
rounded = true
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="current_action" type="Label" parent="horizontal"]
offset_left = 60.0
offset_top = 1.0
offset_right = 149.0
offset_bottom = 12.0
text = "test"

[node name="vertical" type="TextureRect" parent="."]
visible = false
offset_left = 7.0
offset_top = 23.0
offset_right = 22.0
offset_bottom = 75.0
texture = ExtResource( 6 )

[node name="name_bar" type="Panel" parent="."]
offset_left = 17.0
offset_top = 3.0
offset_right = 129.0
offset_bottom = 21.0
theme_override_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="name_bar"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
text = "Bunglebottom"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait_bg" type="TextureRect" parent="."]
visible = false
offset_right = 29.0
offset_bottom = 29.0
texture = ExtResource( 8 )
